--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -5,6 +5,9 @@
 #main {
   @include container;
   @include clearfix;
+  /* grow to push the sticky footer to the viewport bottom on short pages */
+  flex: 1 0 auto;
+  width: 100%;
   margin-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
